add_library( opgen-full_stokes

   P2ElementwiseFullStokesAnnulusMap_0_0.cpp
   P2ElementwiseFullStokesAnnulusMap_0_0.hpp
   P2ElementwiseFullStokesAnnulusMap_0_1.cpp
   P2ElementwiseFullStokesAnnulusMap_0_1.hpp
   P2ElementwiseFullStokesAnnulusMap_1_0.cpp
   P2ElementwiseFullStokesAnnulusMap_1_0.hpp
   P2ElementwiseFullStokesAnnulusMap_1_1.cpp
   P2ElementwiseFullStokesAnnulusMap_1_1.hpp
   P2ElementwiseFullStokesIcosahedralShellMap_0_0.cpp
   P2ElementwiseFullStokesIcosahedralShellMap_0_0.hpp
   P2ElementwiseFullStokesIcosahedralShellMap_0_1.cpp
   P2ElementwiseFullStokesIcosahedralShellMap_0_1.hpp
   P2ElementwiseFullStokesIcosahedralShellMap_0_2.cpp
   P2ElementwiseFullStokesIcosahedralShellMap_0_2.hpp
   P2ElementwiseFullStokesIcosahedralShellMap_1_0.cpp
   P2ElementwiseFullStokesIcosahedralShellMap_1_0.hpp
   P2ElementwiseFullStokesIcosahedralShellMap_1_1.cpp
   P2ElementwiseFullStokesIcosahedralShellMap_1_1.hpp
   P2ElementwiseFullStokesIcosahedralShellMap_1_2.cpp
   P2ElementwiseFullStokesIcosahedralShellMap_1_2.hpp
   P2ElementwiseFullStokesIcosahedralShellMap_2_0.cpp
   P2ElementwiseFullStokesIcosahedralShellMap_2_0.hpp
   P2ElementwiseFullStokesIcosahedralShellMap_2_1.cpp
   P2ElementwiseFullStokesIcosahedralShellMap_2_1.hpp
   P2ElementwiseFullStokesIcosahedralShellMap_2_2.cpp
   P2ElementwiseFullStokesIcosahedralShellMap_2_2.hpp
   P2ElementwiseFullStokes_0_0.cpp
   P2ElementwiseFullStokes_0_0.hpp
   P2ElementwiseFullStokes_0_1.cpp
   P2ElementwiseFullStokes_0_1.hpp
   P2ElementwiseFullStokes_0_2.cpp
   P2ElementwiseFullStokes_0_2.hpp
   P2ElementwiseFullStokes_1_0.cpp
   P2ElementwiseFullStokes_1_0.hpp
   P2ElementwiseFullStokes_1_1.cpp
   P2ElementwiseFullStokes_1_1.hpp
   P2ElementwiseFullStokes_1_2.cpp
   P2ElementwiseFullStokes_1_2.hpp
   P2ElementwiseFullStokes_2_0.cpp
   P2ElementwiseFullStokes_2_0.hpp
   P2ElementwiseFullStokes_2_1.cpp
   P2ElementwiseFullStokes_2_1.hpp
   P2ElementwiseFullStokes_2_2.cpp
   P2ElementwiseFullStokes_2_2.hpp
   P2VectorElementwiseFullStokes.cpp
   P2VectorElementwiseFullStokes.hpp
   P2VectorElementwiseFullStokesAnnulusMap.cpp
   P2VectorElementwiseFullStokesAnnulusMap.hpp
   P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscAnnulusMap.cpp
   P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscAnnulusMap.hpp
   P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscIcosahedralShellMap.cpp
   P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscIcosahedralShellMap.hpp
   P2VectorElementwiseFullStokesIcosahedralShellMap.cpp
   P2VectorElementwiseFullStokesIcosahedralShellMap.hpp
   P2VectorElementwiseFullStokesP0ViscosityIcosahedralShellMap.cpp
   P2VectorElementwiseFullStokesP0ViscosityIcosahedralShellMap.hpp
   P2VectorElementwiseFullStokesP1ViscosityAnnulusMap.cpp
   P2VectorElementwiseFullStokesP1ViscosityAnnulusMap.hpp
   P2VectorElementwiseFullStokesP1ViscosityDim2D.cpp
   P2VectorElementwiseFullStokesP1ViscosityDim2D.hpp
   P2VectorElementwiseFullStokesP1ViscosityDim2DAnnulusMap.cpp
   P2VectorElementwiseFullStokesP1ViscosityDim2DAnnulusMap.hpp
   P2VectorElementwiseFullStokesP1ViscosityIcosahedralShellMap.cpp
   P2VectorElementwiseFullStokesP1ViscosityIcosahedralShellMap.hpp
   P2VectorElementwiseFullStokesP1ViscosityParametricP2Map.cpp
   P2VectorElementwiseFullStokesP1ViscosityParametricP2Map.hpp
)
target_link_libraries( opgen-full_stokes PRIVATE hyteg )

if(HYTEG_BUILD_WITH_AVX AND WALBERLA_DOUBLE_ACCURACY)
   target_sources(opgen-full_stokes PRIVATE

      avx/P2ElementwiseFullStokesAnnulusMap_0_0_applyScaled_P2ElementwiseFullStokesAnnulusMap_0_0_macro_2D.cpp
      avx/P2ElementwiseFullStokesAnnulusMap_0_0_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokesAnnulusMap_0_0_macro_2D.cpp
      avx/P2ElementwiseFullStokesAnnulusMap_0_1_applyScaled_P2ElementwiseFullStokesAnnulusMap_0_1_macro_2D.cpp
      avx/P2ElementwiseFullStokesAnnulusMap_1_0_applyScaled_P2ElementwiseFullStokesAnnulusMap_1_0_macro_2D.cpp
      avx/P2ElementwiseFullStokesAnnulusMap_1_1_applyScaled_P2ElementwiseFullStokesAnnulusMap_1_1_macro_2D.cpp
      avx/P2ElementwiseFullStokesAnnulusMap_1_1_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokesAnnulusMap_1_1_macro_2D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_0_0_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_0_0_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_0_0_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokesIcosahedralShellMap_0_0_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_0_1_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_0_1_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_0_2_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_0_2_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_1_0_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_1_0_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_1_1_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_1_1_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_1_1_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokesIcosahedralShellMap_1_1_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_1_2_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_1_2_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_2_0_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_2_0_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_2_1_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_2_1_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_2_2_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_2_2_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_2_2_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokesIcosahedralShellMap_2_2_macro_3D.cpp
      avx/P2ElementwiseFullStokes_0_0_applyScaled_P2ElementwiseFullStokes_0_0_macro_2D.cpp
      avx/P2ElementwiseFullStokes_0_0_applyScaled_P2ElementwiseFullStokes_0_0_macro_3D.cpp
      avx/P2ElementwiseFullStokes_0_0_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokes_0_0_macro_2D.cpp
      avx/P2ElementwiseFullStokes_0_0_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokes_0_0_macro_3D.cpp
      avx/P2ElementwiseFullStokes_0_1_applyScaled_P2ElementwiseFullStokes_0_1_macro_2D.cpp
      avx/P2ElementwiseFullStokes_0_1_applyScaled_P2ElementwiseFullStokes_0_1_macro_3D.cpp
      avx/P2ElementwiseFullStokes_0_2_applyScaled_P2ElementwiseFullStokes_0_2_macro_3D.cpp
      avx/P2ElementwiseFullStokes_1_0_applyScaled_P2ElementwiseFullStokes_1_0_macro_2D.cpp
      avx/P2ElementwiseFullStokes_1_0_applyScaled_P2ElementwiseFullStokes_1_0_macro_3D.cpp
      avx/P2ElementwiseFullStokes_1_1_applyScaled_P2ElementwiseFullStokes_1_1_macro_2D.cpp
      avx/P2ElementwiseFullStokes_1_1_applyScaled_P2ElementwiseFullStokes_1_1_macro_3D.cpp
      avx/P2ElementwiseFullStokes_1_1_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokes_1_1_macro_2D.cpp
      avx/P2ElementwiseFullStokes_1_1_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokes_1_1_macro_3D.cpp
      avx/P2ElementwiseFullStokes_1_2_applyScaled_P2ElementwiseFullStokes_1_2_macro_3D.cpp
      avx/P2ElementwiseFullStokes_2_0_applyScaled_P2ElementwiseFullStokes_2_0_macro_3D.cpp
      avx/P2ElementwiseFullStokes_2_1_applyScaled_P2ElementwiseFullStokes_2_1_macro_3D.cpp
      avx/P2ElementwiseFullStokes_2_2_applyScaled_P2ElementwiseFullStokes_2_2_macro_3D.cpp
      avx/P2ElementwiseFullStokes_2_2_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokes_2_2_macro_3D.cpp
      avx/P2VectorElementwiseFullStokesAnnulusMap_applyScaled_P2VectorElementwiseFullStokesAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscAnnulusMap_applyScaled_P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscIcosahedralShellMap_applyScaled_P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseFullStokesIcosahedralShellMap_applyScaled_P2VectorElementwiseFullStokesIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseFullStokesIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseFullStokesP0ViscosityIcosahedralShellMap_applyScaled_P2VectorElementwiseFullStokesP0ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseFullStokesP0ViscosityIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesP0ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseFullStokesP1ViscosityAnnulusMap_applyScaled_P2VectorElementwiseFullStokesP1ViscosityAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesP1ViscosityAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesP1ViscosityAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesP1ViscosityDim2DAnnulusMap_applyScaled_P2VectorElementwiseFullStokesP1ViscosityDim2DAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesP1ViscosityDim2DAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesP1ViscosityDim2DAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesP1ViscosityDim2D_applyScaled_P2VectorElementwiseFullStokesP1ViscosityDim2D_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesP1ViscosityDim2D_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesP1ViscosityDim2D_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesP1ViscosityIcosahedralShellMap_applyScaled_P2VectorElementwiseFullStokesP1ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseFullStokesP1ViscosityIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesP1ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_applyScaled_P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_applyScaled_P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_macro_3D.cpp
      avx/P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_macro_3D.cpp
      avx/P2VectorElementwiseFullStokes_applyScaled_P2VectorElementwiseFullStokes_macro_2D.cpp
      avx/P2VectorElementwiseFullStokes_applyScaled_P2VectorElementwiseFullStokes_macro_3D.cpp
      avx/P2VectorElementwiseFullStokes_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokes_macro_2D.cpp
      avx/P2VectorElementwiseFullStokes_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokes_macro_3D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_0_0_toMatrixScaled_P2ElementwiseFullStokesAnnulusMap_0_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_0_1_toMatrixScaled_P2ElementwiseFullStokesAnnulusMap_0_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_1_0_toMatrixScaled_P2ElementwiseFullStokesAnnulusMap_1_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_1_1_toMatrixScaled_P2ElementwiseFullStokesAnnulusMap_1_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_0_0_toMatrixScaled_P2ElementwiseFullStokesIcosahedralShellMap_0_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_0_1_toMatrixScaled_P2ElementwiseFullStokesIcosahedralShellMap_0_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_0_2_toMatrixScaled_P2ElementwiseFullStokesIcosahedralShellMap_0_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_1_0_toMatrixScaled_P2ElementwiseFullStokesIcosahedralShellMap_1_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_1_1_toMatrixScaled_P2ElementwiseFullStokesIcosahedralShellMap_1_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_1_2_toMatrixScaled_P2ElementwiseFullStokesIcosahedralShellMap_1_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_2_0_toMatrixScaled_P2ElementwiseFullStokesIcosahedralShellMap_2_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_2_1_toMatrixScaled_P2ElementwiseFullStokesIcosahedralShellMap_2_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_2_2_toMatrixScaled_P2ElementwiseFullStokesIcosahedralShellMap_2_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_0_0_toMatrixScaled_P2ElementwiseFullStokes_0_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_0_0_toMatrixScaled_P2ElementwiseFullStokes_0_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_0_1_toMatrixScaled_P2ElementwiseFullStokes_0_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_0_1_toMatrixScaled_P2ElementwiseFullStokes_0_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_0_2_toMatrixScaled_P2ElementwiseFullStokes_0_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_1_0_toMatrixScaled_P2ElementwiseFullStokes_1_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_1_0_toMatrixScaled_P2ElementwiseFullStokes_1_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_1_1_toMatrixScaled_P2ElementwiseFullStokes_1_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_1_1_toMatrixScaled_P2ElementwiseFullStokes_1_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_1_2_toMatrixScaled_P2ElementwiseFullStokes_1_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_2_0_toMatrixScaled_P2ElementwiseFullStokes_2_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_2_1_toMatrixScaled_P2ElementwiseFullStokes_2_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_2_2_toMatrixScaled_P2ElementwiseFullStokes_2_2_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokesAnnulusMap_toMatrixScaled_P2VectorElementwiseFullStokesAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscAnnulusMap_toMatrixScaled_P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscIcosahedralShellMap_toMatrixScaled_P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokesIcosahedralShellMap_toMatrixScaled_P2VectorElementwiseFullStokesIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokesP0ViscosityIcosahedralShellMap_toMatrixScaled_P2VectorElementwiseFullStokesP0ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokesP1ViscosityAnnulusMap_toMatrixScaled_P2VectorElementwiseFullStokesP1ViscosityAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesP1ViscosityDim2DAnnulusMap_toMatrixScaled_P2VectorElementwiseFullStokesP1ViscosityDim2DAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesP1ViscosityDim2D_toMatrixScaled_P2VectorElementwiseFullStokesP1ViscosityDim2D_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesP1ViscosityIcosahedralShellMap_toMatrixScaled_P2VectorElementwiseFullStokesP1ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_toMatrixScaled_P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_toMatrixScaled_P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokes_toMatrixScaled_P2VectorElementwiseFullStokes_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokes_toMatrixScaled_P2VectorElementwiseFullStokes_macro_3D.cpp
   )

   set_source_files_properties(

      avx/P2ElementwiseFullStokesAnnulusMap_0_0_applyScaled_P2ElementwiseFullStokesAnnulusMap_0_0_macro_2D.cpp
      avx/P2ElementwiseFullStokesAnnulusMap_0_0_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokesAnnulusMap_0_0_macro_2D.cpp
      avx/P2ElementwiseFullStokesAnnulusMap_0_1_applyScaled_P2ElementwiseFullStokesAnnulusMap_0_1_macro_2D.cpp
      avx/P2ElementwiseFullStokesAnnulusMap_1_0_applyScaled_P2ElementwiseFullStokesAnnulusMap_1_0_macro_2D.cpp
      avx/P2ElementwiseFullStokesAnnulusMap_1_1_applyScaled_P2ElementwiseFullStokesAnnulusMap_1_1_macro_2D.cpp
      avx/P2ElementwiseFullStokesAnnulusMap_1_1_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokesAnnulusMap_1_1_macro_2D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_0_0_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_0_0_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_0_0_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokesIcosahedralShellMap_0_0_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_0_1_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_0_1_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_0_2_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_0_2_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_1_0_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_1_0_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_1_1_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_1_1_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_1_1_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokesIcosahedralShellMap_1_1_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_1_2_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_1_2_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_2_0_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_2_0_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_2_1_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_2_1_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_2_2_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_2_2_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_2_2_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokesIcosahedralShellMap_2_2_macro_3D.cpp
      avx/P2ElementwiseFullStokes_0_0_applyScaled_P2ElementwiseFullStokes_0_0_macro_2D.cpp
      avx/P2ElementwiseFullStokes_0_0_applyScaled_P2ElementwiseFullStokes_0_0_macro_3D.cpp
      avx/P2ElementwiseFullStokes_0_0_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokes_0_0_macro_2D.cpp
      avx/P2ElementwiseFullStokes_0_0_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokes_0_0_macro_3D.cpp
      avx/P2ElementwiseFullStokes_0_1_applyScaled_P2ElementwiseFullStokes_0_1_macro_2D.cpp
      avx/P2ElementwiseFullStokes_0_1_applyScaled_P2ElementwiseFullStokes_0_1_macro_3D.cpp
      avx/P2ElementwiseFullStokes_0_2_applyScaled_P2ElementwiseFullStokes_0_2_macro_3D.cpp
      avx/P2ElementwiseFullStokes_1_0_applyScaled_P2ElementwiseFullStokes_1_0_macro_2D.cpp
      avx/P2ElementwiseFullStokes_1_0_applyScaled_P2ElementwiseFullStokes_1_0_macro_3D.cpp
      avx/P2ElementwiseFullStokes_1_1_applyScaled_P2ElementwiseFullStokes_1_1_macro_2D.cpp
      avx/P2ElementwiseFullStokes_1_1_applyScaled_P2ElementwiseFullStokes_1_1_macro_3D.cpp
      avx/P2ElementwiseFullStokes_1_1_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokes_1_1_macro_2D.cpp
      avx/P2ElementwiseFullStokes_1_1_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokes_1_1_macro_3D.cpp
      avx/P2ElementwiseFullStokes_1_2_applyScaled_P2ElementwiseFullStokes_1_2_macro_3D.cpp
      avx/P2ElementwiseFullStokes_2_0_applyScaled_P2ElementwiseFullStokes_2_0_macro_3D.cpp
      avx/P2ElementwiseFullStokes_2_1_applyScaled_P2ElementwiseFullStokes_2_1_macro_3D.cpp
      avx/P2ElementwiseFullStokes_2_2_applyScaled_P2ElementwiseFullStokes_2_2_macro_3D.cpp
      avx/P2ElementwiseFullStokes_2_2_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokes_2_2_macro_3D.cpp
      avx/P2VectorElementwiseFullStokesAnnulusMap_applyScaled_P2VectorElementwiseFullStokesAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscAnnulusMap_applyScaled_P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscIcosahedralShellMap_applyScaled_P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseFullStokesIcosahedralShellMap_applyScaled_P2VectorElementwiseFullStokesIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseFullStokesIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseFullStokesP0ViscosityIcosahedralShellMap_applyScaled_P2VectorElementwiseFullStokesP0ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseFullStokesP0ViscosityIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesP0ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseFullStokesP1ViscosityAnnulusMap_applyScaled_P2VectorElementwiseFullStokesP1ViscosityAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesP1ViscosityAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesP1ViscosityAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesP1ViscosityDim2DAnnulusMap_applyScaled_P2VectorElementwiseFullStokesP1ViscosityDim2DAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesP1ViscosityDim2DAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesP1ViscosityDim2DAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesP1ViscosityDim2D_applyScaled_P2VectorElementwiseFullStokesP1ViscosityDim2D_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesP1ViscosityDim2D_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesP1ViscosityDim2D_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesP1ViscosityIcosahedralShellMap_applyScaled_P2VectorElementwiseFullStokesP1ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseFullStokesP1ViscosityIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesP1ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_applyScaled_P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_applyScaled_P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_macro_3D.cpp
      avx/P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_macro_3D.cpp
      avx/P2VectorElementwiseFullStokes_applyScaled_P2VectorElementwiseFullStokes_macro_2D.cpp
      avx/P2VectorElementwiseFullStokes_applyScaled_P2VectorElementwiseFullStokes_macro_3D.cpp
      avx/P2VectorElementwiseFullStokes_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokes_macro_2D.cpp
      avx/P2VectorElementwiseFullStokes_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokes_macro_3D.cpp

      PROPERTIES COMPILE_OPTIONS ${HYTEG_COMPILER_NATIVE_FLAGS}
   )
else()
   if(HYTEG_BUILD_WITH_AVX AND NOT WALBERLA_DOUBLE_ACCURACY)
      message(WARNING "AVX vectorization only available in double precision. Using scalar kernels.")
   endif()

   target_sources(opgen-full_stokes PRIVATE

      noarch/P2ElementwiseFullStokesAnnulusMap_0_0_applyScaled_P2ElementwiseFullStokesAnnulusMap_0_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_0_0_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokesAnnulusMap_0_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_0_0_toMatrixScaled_P2ElementwiseFullStokesAnnulusMap_0_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_0_1_applyScaled_P2ElementwiseFullStokesAnnulusMap_0_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_0_1_toMatrixScaled_P2ElementwiseFullStokesAnnulusMap_0_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_1_0_applyScaled_P2ElementwiseFullStokesAnnulusMap_1_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_1_0_toMatrixScaled_P2ElementwiseFullStokesAnnulusMap_1_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_1_1_applyScaled_P2ElementwiseFullStokesAnnulusMap_1_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_1_1_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokesAnnulusMap_1_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_1_1_toMatrixScaled_P2ElementwiseFullStokesAnnulusMap_1_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_0_0_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_0_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_0_0_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokesIcosahedralShellMap_0_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_0_0_toMatrixScaled_P2ElementwiseFullStokesIcosahedralShellMap_0_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_0_1_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_0_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_0_1_toMatrixScaled_P2ElementwiseFullStokesIcosahedralShellMap_0_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_0_2_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_0_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_0_2_toMatrixScaled_P2ElementwiseFullStokesIcosahedralShellMap_0_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_1_0_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_1_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_1_0_toMatrixScaled_P2ElementwiseFullStokesIcosahedralShellMap_1_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_1_1_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_1_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_1_1_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokesIcosahedralShellMap_1_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_1_1_toMatrixScaled_P2ElementwiseFullStokesIcosahedralShellMap_1_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_1_2_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_1_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_1_2_toMatrixScaled_P2ElementwiseFullStokesIcosahedralShellMap_1_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_2_0_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_2_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_2_0_toMatrixScaled_P2ElementwiseFullStokesIcosahedralShellMap_2_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_2_1_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_2_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_2_1_toMatrixScaled_P2ElementwiseFullStokesIcosahedralShellMap_2_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_2_2_applyScaled_P2ElementwiseFullStokesIcosahedralShellMap_2_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_2_2_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokesIcosahedralShellMap_2_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_2_2_toMatrixScaled_P2ElementwiseFullStokesIcosahedralShellMap_2_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_0_0_applyScaled_P2ElementwiseFullStokes_0_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_0_0_applyScaled_P2ElementwiseFullStokes_0_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_0_0_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokes_0_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_0_0_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokes_0_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_0_0_toMatrixScaled_P2ElementwiseFullStokes_0_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_0_0_toMatrixScaled_P2ElementwiseFullStokes_0_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_0_1_applyScaled_P2ElementwiseFullStokes_0_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_0_1_applyScaled_P2ElementwiseFullStokes_0_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_0_1_toMatrixScaled_P2ElementwiseFullStokes_0_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_0_1_toMatrixScaled_P2ElementwiseFullStokes_0_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_0_2_applyScaled_P2ElementwiseFullStokes_0_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_0_2_toMatrixScaled_P2ElementwiseFullStokes_0_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_1_0_applyScaled_P2ElementwiseFullStokes_1_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_1_0_applyScaled_P2ElementwiseFullStokes_1_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_1_0_toMatrixScaled_P2ElementwiseFullStokes_1_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_1_0_toMatrixScaled_P2ElementwiseFullStokes_1_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_1_1_applyScaled_P2ElementwiseFullStokes_1_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_1_1_applyScaled_P2ElementwiseFullStokes_1_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_1_1_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokes_1_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_1_1_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokes_1_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_1_1_toMatrixScaled_P2ElementwiseFullStokes_1_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_1_1_toMatrixScaled_P2ElementwiseFullStokes_1_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_1_2_applyScaled_P2ElementwiseFullStokes_1_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_1_2_toMatrixScaled_P2ElementwiseFullStokes_1_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_2_0_applyScaled_P2ElementwiseFullStokes_2_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_2_0_toMatrixScaled_P2ElementwiseFullStokes_2_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_2_1_applyScaled_P2ElementwiseFullStokes_2_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_2_1_toMatrixScaled_P2ElementwiseFullStokes_2_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_2_2_applyScaled_P2ElementwiseFullStokes_2_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_2_2_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseFullStokes_2_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_2_2_toMatrixScaled_P2ElementwiseFullStokes_2_2_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokesAnnulusMap_applyScaled_P2VectorElementwiseFullStokesAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesAnnulusMap_toMatrixScaled_P2VectorElementwiseFullStokesAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscAnnulusMap_applyScaled_P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscAnnulusMap_toMatrixScaled_P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscIcosahedralShellMap_applyScaled_P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscIcosahedralShellMap_toMatrixScaled_P2VectorElementwiseFullStokesFrankKamenetskiiSimpleViscIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokesIcosahedralShellMap_applyScaled_P2VectorElementwiseFullStokesIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokesIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokesIcosahedralShellMap_toMatrixScaled_P2VectorElementwiseFullStokesIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokesP0ViscosityIcosahedralShellMap_applyScaled_P2VectorElementwiseFullStokesP0ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokesP0ViscosityIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesP0ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokesP0ViscosityIcosahedralShellMap_toMatrixScaled_P2VectorElementwiseFullStokesP0ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokesP1ViscosityAnnulusMap_applyScaled_P2VectorElementwiseFullStokesP1ViscosityAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesP1ViscosityAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesP1ViscosityAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesP1ViscosityAnnulusMap_toMatrixScaled_P2VectorElementwiseFullStokesP1ViscosityAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesP1ViscosityDim2DAnnulusMap_applyScaled_P2VectorElementwiseFullStokesP1ViscosityDim2DAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesP1ViscosityDim2DAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesP1ViscosityDim2DAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesP1ViscosityDim2DAnnulusMap_toMatrixScaled_P2VectorElementwiseFullStokesP1ViscosityDim2DAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesP1ViscosityDim2D_applyScaled_P2VectorElementwiseFullStokesP1ViscosityDim2D_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesP1ViscosityDim2D_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesP1ViscosityDim2D_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesP1ViscosityDim2D_toMatrixScaled_P2VectorElementwiseFullStokesP1ViscosityDim2D_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesP1ViscosityIcosahedralShellMap_applyScaled_P2VectorElementwiseFullStokesP1ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokesP1ViscosityIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesP1ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokesP1ViscosityIcosahedralShellMap_toMatrixScaled_P2VectorElementwiseFullStokesP1ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_applyScaled_P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_applyScaled_P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_toMatrixScaled_P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_toMatrixScaled_P2VectorElementwiseFullStokesP1ViscosityParametricP2Map_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokes_applyScaled_P2VectorElementwiseFullStokes_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokes_applyScaled_P2VectorElementwiseFullStokes_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokes_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokes_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokes_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseFullStokes_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokes_toMatrixScaled_P2VectorElementwiseFullStokes_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokes_toMatrixScaled_P2VectorElementwiseFullStokes_macro_3D.cpp
   )
endif()

if (HYTEG_BUILD_WITH_PETSC)
   target_link_libraries(opgen-full_stokes PUBLIC PETSc::PETSc)
endif ()
if (WALBERLA_BUILD_WITH_HALF_PRECISION_SUPPORT)
    target_compile_features(opgen-full_stokes PUBLIC cxx_std_23)
else ()
    target_compile_features(opgen-full_stokes PUBLIC cxx_std_17)
endif ()
